--- a/Examenes/examen2/examen/src/main/resources/templates/index.html
+++ b/Examenes/examen2/examen/src/main/resources/templates/index.html
@@ -174,14 +174,18 @@
                     </div>
                     <div class="col-md-3 grid-margin stretch-card">
                         <div class="card">
-                            <div class="card-body">
-                                <p class="card-title text-md-center text-xl-left">Returns</p>
-                                <div class="d-flex flex-wrap justify-content-between justify-content-md-center justify-content-xl-between align-items-center">
-                                    <h3 class="mb-0 mb-md-2 mb-xl-0 order-md-1 order-xl-0">61344</h3>
-                                    <i class="ti-layers-alt icon-md text-muted mb-0 mb-md-3 mb-xl-0"></i>
+                            <a href="/listadoVisitas" style="text-decoration: none; color: black;">
+                                <div class="card-body">
+                                    <p class="card-title text-md-center text-xl-left">Returns</p>
+                                    <div class="d-flex flex-wrap justify-content-between justify-content-md-center justify-content-xl-between align-items-center">
+                                        <h3 class="mb-0 mb-md-2 mb-xl-0 order-md-1 order-xl-0">61344</h3>
+                                        <i class="ti-layers-alt icon-md text-muted mb-0 mb-md-3 mb-xl-0"></i>
+                                    </div>
+                                    <p class="mb-0 mt-2 text-success">23.00%<span class="text-black ms-1"><small>(30 days)</small></span></p>
                                 </div>
-                                <p class="mb-0 mt-2 text-success">23.00%<span class="text-black ms-1"><small>(30 days)</small></span></p>
-                            </div>
+                            </a>
+
+
                         </div>
                     </div>
                 </div>
