--- a/Examenes/examen2/templates/templateCopy/template/pages/samples/lock-screen.html
+++ b/Examenes/examen2/templates/templateCopy/template/pages/samples/lock-screen.html
@@ -5,7 +5,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>RoyalUI Admin</title>
+  <title>Exito</title>
   <!-- plugins:css -->
   <link rel="stylesheet" href="../../vendors/ti-icons/css/themify-icons.css">
   <link rel="stylesheet" href="../../vendors/base/vendor.bundle.base.css">
@@ -25,18 +25,14 @@
         <div class="row w-100">
           <div class="col-lg-4 mx-auto">
             <div class="auth-form-transparent text-left p-5 text-center">
-              <img src="../../images/faces/face13.jpg" class="lock-profile-img" alt="img">
+                <!--  <img src="../../images/faces/face13.jpg" class="lock-profile-img" alt="img"> -->
+             
+              <h3 style="color: white;">SE REALIZÓ CON EXITO</h3>
               <form class="pt-5">
-                <div class="form-group">
-                  <label for="examplePassword1">Password to unlock</label>
-                  <input type="password" class="form-control text-center" id="examplePassword1" placeholder="Password">
-                </div>
                 <div class="mt-5">
-                  <a class="btn btn-block btn-success btn-lg font-weight-medium" href="../../index.html">Unlock</a>
+                  <a class="btn btn-block btn-success btn-lg font-weight-medium" href="../../index.html">Volver al inicio</a>
                 </div>
-                <div class="mt-3 text-center">
-                  <a href="#" class="auth-link text-white">Sign in using a different account</a>
-                </div>
+                
               </form>
             </div>
           </div>
