--- a/Examenes/examen2/examen/src/main/resources/templates/listadoClientes.html
+++ b/Examenes/examen2/examen/src/main/resources/templates/listadoClientes.html
@@ -170,8 +170,8 @@
                                         <td th:text="${entry.direccion}"></td>
                                         <td th:text="${entry.telefono}"></td>
                                         <td>
-<!--                                            <a href="/listadoPersonas" class="btn btn-dark">Ver contactos</a>-->
-<!--                                            <a th:href="@{/listadoPersonas/{id}(id=${entry.id})}" class="btn btn-dark">Ver contactos</a>-->
+
+                                            <a th:href="@{/listadoPersonas/{id}(id=${entry.id})}" class="btn btn-dark">Ver contactos</a>
                                         </td>
                                     </tr>
                                     </tbody>
