--- a/Examenes/examen2/examen/src/main/resources/templates/listadoPersonas.html
+++ b/Examenes/examen2/examen/src/main/resources/templates/listadoPersonas.html
@@ -162,7 +162,7 @@
                                         <th>Teléfono</th>
                                     </tr>
                                     </thead>
-                                    <tbody th:each="entry,status : ${persona}">
+                                    <tbody th:each="entry,status : ${personas}">
                                     <tr>
                                         <td th:text="${entry.idCliente}">NOMBRE</td>
                                         <td th:text="${entry.nombre}">NOMBRE</td>
