--- a/Examenes/examen2/examen/src/main/resources/templates/registroPersonas.html
+++ b/Examenes/examen2/examen/src/main/resources/templates/registroPersonas.html
@@ -158,12 +158,13 @@
                 </p>
                 <div class="row">
                   <div class="col-md-6">
-                    <div class="form-group row">
-                      <label class="col-sm-3 col-form-label">Cédula de Cliente</label>
-                      <div class="col-sm-9">
-                        <input type="text" th:field="*{idCliente}" id="idCliente"
-                               class="form-control" disabled/>
-                      </div>
+
+                    <div class="form-group">
+                      <label>Cliente asociado</label>
+                      <select th:field="*{idCliente}"  id="idCliente" class="form-control form-control-sm">
+                        <option value="0">Seleccione el cliente</option>
+                        <option th:each="cliente : ${clientes}" th:value="${cliente.id}" th:text="${cliente.razonSocial}">1</option>
+                      </select>
                     </div>
                   </div>
                   <div class="col-md-6">
