--- a/Examenes/examen2/examen/src/main/resources/templates/editarPersona.html
+++ b/Examenes/examen2/examen/src/main/resources/templates/editarPersona.html
@@ -41,8 +41,7 @@
     <!-- partial:partials/_navbar.html -->
     <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
         <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-            <a class="navbar-brand  " href="/">Servicio Auditorias</a>
-
+            <a class="navbar-brand  " href="index.html">Servicio Auditorias</a>
 
         </div>
         <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
@@ -60,7 +59,7 @@
         <nav class="sidebar sidebar-offcanvas" id="sidebar">
             <ul class="nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">
+                    <a class="nav-link" href="index.html">
                         <i class="ti-shield menu-icon"></i>
                         <span class="menu-title">Servicios</span>
                     </a>
@@ -143,44 +142,87 @@
                             <div>
                                 <h4 class="font-weight-bold mb-0">Servicio de auditorias</h4>
                             </div>
+
                         </div>
                     </div>
                 </div>
                 <!-- CONTENT -->
-                <div class="w-100">
+                <div class="col-12 grid-margin">
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="card-title">Personas de Contacto</h4>
-                            <div class="table-responsive">
-                                <table class="table table-hover">
-                                    <thead>
-                                    <tr>
-                                        <th>Nombre</th>
-                                        <th>Primer Apellido</th>
-                                        <th>Segundo Apellido</th>
-                                        <th>Correo electrónico</th>
-                                        <th>Teléfono</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody th:each="entry,status : ${personas}">
-                                    <tr>
-                                        <td th:text="${entry.nombre}">NOMBRE</td>
-                                        <td th:text="${entry.apellido1}">NOMBRE</td>
-                                        <td th:text="${entry.apellido2}">NOMBRE</td>
-                                        <td th:text="${entry.email}">NOMBRE</td>
-                                        <td th:text="${entry.telefono}">NOMBRE</td>
-                                        <td>
-                                            <a th:href="@{/borrarPersona/{id}(id=${entry.id})}"
-                                               class="btn btn-dark">Borrar contacto</a>
-                                            <a th:href="@{/editarPersona/{id}(id=${entry.id})}"
-                                               class="btn btn-dark">Editar contacto</a>
-                                        </td>
-
-                                    </tr>
-
-                                    </tbody>
-                                </table>
-                            </div>
+                            <h4 class="card-title">Actualizar persona</h4>
+                            <form action="#" th:action="@{/editarPersona/{id}(id=${id})}" th:object="${personaToEdit}"
+                                  method="post"
+                                  class="form-sample">
+                                <p class="card-description">
+                                    Informacion personal
+                                </p>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="form-group row">
+                                            <label class="col-sm-3 col-form-label">ID de cliente</label>
+                                            <div class="col-sm-9">
+                                                <input type="text" th:field="*{idCliente}" id="idCliente"
+                                                       class="form-control" readonly/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-group row">
+                                            <label class="col-sm-3 col-form-label">Nombre</label>
+                                            <div class="col-sm-9">
+                                                <input type="text" th:field="*{nombre}" id="nombre"
+                                                       class="form-control"/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="form-group row">
+                                            <label class="col-sm-3 col-form-label">Primer apellido</label>
+                                            <div class="col-sm-9">
+                                                <input type="text" th:field="*{apellido1}" id="apellido1"
+                                                       class="form-control"/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-group row">
+                                            <label class="col-sm-3 col-form-label">Segundo apellido</label>
+                                            <div class="col-sm-9">
+                                                <input type="text" th:field="*{apellido2}" id="apellido2" class="form-control"/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="form-group row">
+                                            <label class="col-sm-3 col-form-label">Correo electrónico</label>
+                                            <div class="col-sm-9">
+                                                <input type="text" th:field="*{email}" id="email"
+                                                       class="form-control"/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-group row">
+                                            <label class="col-sm-3 col-form-label">Teléfono</label>
+                                            <div class="col-sm-9">
+                                                <input class="form-control" th:field="*{telefono}"
+                                                       id="telefono"/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <button type="submit" class="btn btn-primary me-2">Actualizar contacto</button>
+                                        <button class="btn btn-light">Cancelar</button>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -201,12 +243,7 @@
         <!-- page-body-wrapper ends -->
     </div>
     <!-- container-scroller -->
-    <script>
-        var id = String(window.location.href);
-        id = id.substr(34);
-        console.log(id);
-        sessionStorage.setItem('IdCliente', id);
-    </script>
+
     <!-- plugins:js -->
     <script src="../vendors/base/vendor.bundle.base.js"></script>
     <!-- endinject -->
